syntax = "proto2";

package iit.advr;

import "header.proto";
import "vector2d.proto";

message Smoother_step {

    repeated gazebo.msgs.Vector2d  point = 1;
}

message Gains {

    enum Type { 
        POSITION    = 1;
        IMPEDANCE   = 2;
        TORQUE      = 3;
    }
    // Identifies which field is filled in.
    required Type   type = 1;
    
    required double kp  = 2;
    required double ki  = 3;
    required double kd  = 4;
    optional double kkp = 5;
    optional double kki = 6;
    optional double kkd = 7;
    
}

message Repl_hdr {

}

message Ctrl_cmd {
    
    enum Type {
        CTRL_DAC_TUNE           = 1;
        CTRL_REMOVE_TORQUE_OFFS = 2;
        CTRL_SET_ZERO_POSITION  = 3;
        CTRL_TEST_DONE          = 4;
        CTRL_TEST_ERROR         = 5;
    }
    // Identifies which field is filled in.
    required Type   type        = 1;
    required int32  board_id    = 2;

    optional float  value       = 3;
}

message Flash_cmd {

    enum Type { 
        SAVE_PARAMS_TO_FLASH    = 1;
        LOAD_PARAMS_FROM_FLASH  = 2;
        LOAD_DEFAULT_PARAMS     = 3;
        
    }
    // Identifies which field is filled in.
    required Type   type        = 1;
    required int32  board_id    = 2;
}

message Repl_cmd {

   enum Type { 
        SET_SMOOTHER_STEP   = 1;
        SET_GAINS           = 2;
        SET_CTRL_CMD        = 3;
        SET_FLASH_CMD       = 4;        
    }
    // Identifies which field is filled in.
    required Type   type = 1;
    
    optional gazebo.msgs.Header header = 2;
    
    // One of the following will be filled in.
    optional Smoother_step      smoother_step = 3;
    optional Gains              gains = 4;
    optional Ctrl_cmd           ctrl_cmd = 5;
    optional Flash_cmd          flash_cmd = 6;
        
}

message Cmd_reply {

   enum Type { 
        ACK  = 1;
        NACK = 2;
    }
    // Identifies which field is filled in.
    required Type   type = 1;
    required string msg = 2;
    
    optional gazebo.msgs.Header header = 3;
    
}
